Partial_14Dec2021/force-app/main/default/objects/Beat_Plan__c/Beat_Plan__c.object-meta.xml
<CustomObject>
    <label>Beat Plan</label>
    <nameField>
        <displayFormat>BP-{00000}</displayFormat>
        <label>Beat Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>