Partial_14Dec2021/force-app/main/default/objects/Beat_Plan__c/fields/accounts__c.field-meta.xml
<CustomField>
    <fullName>accounts__c</fullName>
    <label>#accounts</label>
    <summaryForeignKey>Beat_Plan_Account__c.Beat_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>