Partial_14Dec2021/force-app/main/default/objects/Beat_Plan__c/fields/Beat_Date__c.field-meta.xml
<CustomField>
    <fullName>Beat_Date__c</fullName>
    <label>Beat Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>