Partial_14Dec2021/force-app/main/default/objects/Beat_Plan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Beat_Date__c</columns>
    <columns>Beat_Master__c</columns>
    <columns>accounts__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>